@@ -4,11 +4,14 @@ import app.entity.category.model.Category;
 import app.entity.category.repository.CategoryRepository;
 import app.entity.exercise.model.Exercise;
 import app.entity.exercise.service.ExerciseService;
-import app.entity.workout.repository.WorkoutRepository;
+import app.entity.user.model.User;
+import app.entity.user.service.UserService;
+import app.entity.workout.model.Workout;
 import app.entity.workout.service.WorkoutService;
 import app.web.dto.CategoryDTO;
 import app.web.dto.ExerciseDTO;
 import app.web.dto.SelectedExercisesRequest;
+import app.web.dto.WorkoutRequest;
 import jakarta.servlet.http.HttpSession;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -24,12 +27,14 @@ import java.util.stream.Collectors;
 @RequestMapping("/workout")
 public class WorkoutSessionController {
 
+    private final UserService userService;
     private final WorkoutService workoutService;
     private final ExerciseService exerciseService;
     private final CategoryRepository categoryRepository;
 
     @Autowired
-    public WorkoutSessionController(WorkoutService workoutService, ExerciseService exerciseService, CategoryRepository categoryRepository) {
+    public WorkoutSessionController(UserService userService, WorkoutService workoutService, ExerciseService exerciseService, CategoryRepository categoryRepository) {
+        this.userService = userService;
         this.workoutService = workoutService;
         this.exerciseService = exerciseService;
         this.categoryRepository = categoryRepository;
@@ -74,22 +79,72 @@ public class WorkoutSessionController {
     @GetMapping("/startWorkout")
     public ModelAndView startWorkout(HttpSession session) {
         Object attribute = session.getAttribute("selectedExercises");
-
         if (!(attribute instanceof List<?> rawList)) {
             return new ModelAndView("redirect:/workout");
         }
-
         List<UUID> selectedExerciseIds = rawList.stream()
                 .filter(item -> item instanceof UUID)
                 .map(UUID.class::cast)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<ExerciseDTO> exercises = exerciseService.getExercisesByIds(selectedExerciseIds);
+        List<Exercise> exercises = exerciseService.getExercisesByIds(selectedExerciseIds);
+        if (exercises == null || exercises.isEmpty()) {
+            return new ModelAndView("redirect:/workout");
+        }
+
+        UUID sessionId = UUID.randomUUID();
+        session.setAttribute("workoutSessionId", sessionId);
 
         ModelAndView modelAndView = new ModelAndView("startWorkout");
+        modelAndView.addObject("sessionId", sessionId);
         modelAndView.addObject("exercises", exercises);
+
         return modelAndView;
     }
+
+    @PostMapping("/saveWorkout")
+    public ResponseEntity<String> saveWorkout(@RequestBody WorkoutRequest workoutRequest) {
+        System.out.println("DEBUG: Received workout save request - Name: " + workoutRequest.getWorkoutName());
+
+        if (workoutRequest.getExerciseIds() == null || workoutRequest.getExerciseIds().isEmpty()) {
+            System.out.println("ERROR: No exercise IDs provided!");
+            return ResponseEntity.badRequest().body("No exercise IDs provided.");
+        }
+
+        for (UUID id : workoutRequest.getExerciseIds()) {
+            if (id == null) {
+                System.out.println("ERROR: Found null exercise ID!");
+                return ResponseEntity.badRequest().body("Null exercise ID detected.");
+            }
+        }
+
+        User user = userService.getById(workoutRequest.getUserId());
+        if (user == null) {
+            System.out.println("DEBUG: User not found.");
+            return ResponseEntity.badRequest().body("User not found.");
+        }
+
+        System.out.println("DEBUG: Fetching exercises for IDs: " + workoutRequest.getExerciseIds());
+
+        List<Exercise> exercises = exerciseService.getExercisesByIds(workoutRequest.getExerciseIds());
+
+        if (exercises.isEmpty()) {
+            System.out.println("DEBUG: No exercises found for provided IDs.");
+            return ResponseEntity.badRequest().body("No exercises found.");
+        }
+
+        System.out.println("DEBUG: Found " + exercises.size() + " exercises, creating workout...");
+
+        Workout savedWorkout = workoutService.createWorkout(
+                workoutRequest.getWorkoutName(),
+                user.getId(),
+                exercises);
+
+        savedWorkout.setCompleted(true);
+
+        return ResponseEntity.ok("Workout saved successfully with ID: " + savedWorkout.getId());
+    }
+
 
     @GetMapping("/complete")
     public ModelAndView completeWorkout() {
